Set body_hfw min-height and height to 100% to correct words bleeding into header.

--- a/public_html/css/test.css
+++ b/public_html/css/test.css
@@ -33,6 +33,7 @@ body {
 #main_hfw {
     min-width: 1040px;
     min-height: 400px;
+    height: 100%;
 }
 #content_1_hfw {
     height:100%;
